performance issue fixed for filters for orders page