@@ -16,39 +16,35 @@ public class OrderFilters {
     @Autowired
     private PostgresService postgresService;
 
-    // 📌 API: Get unique values for order filters (status, type, method, carrier)
     @GetMapping("/filter-values")
     public ResponseEntity<?> getOrderFilterValues() {
         try {
-            String query = "SELECT * FROM get_order_filters()";
+            String query = "SELECT * FROM get_order_filter_arrays()";
+            List<Map<String, Object>> results = postgresService.queryWithArrayHandling(query);
 
-            List<Map<String, Object>> results = postgresService.query(query);
 
-            // Use sets to get unique values across rows
-            Set<String> statuses = new HashSet<>();
-            Set<String> types = new HashSet<>();
-            Set<String> methods = new HashSet<>();
-            Set<String> carriers = new HashSet<>();
-
-            for (Map<String, Object> row : results) {
-                if (row.get("status") != null) statuses.add(row.get("status").toString());
-                if (row.get("type") != null) types.add(row.get("type").toString());
-                if (row.get("method") != null) methods.add(row.get("method").toString());
-                if (row.get("carrier") != null) carriers.add(row.get("carrier").toString());
+            if (results.isEmpty()) {
+                return ResponseEntity.ok(Map.of(
+                    "statuses", List.of(),
+                    "types", List.of(),
+                    "methods", List.of(),
+                    "carriers", List.of()
+                ));
             }
 
-            Map<String, Object> response = new HashMap<>();
-            response.put("statuses", statuses);
-            response.put("types", types);
-            response.put("methods", methods);
-            response.put("carriers", carriers);
+            Map<String, Object> row = results.get(0);
 
-            return ResponseEntity.ok(response);
-
+            return ResponseEntity.ok(Map.of(
+                "statuses", row.get("statuses"),
+                "types", row.get("types"),
+                "methods", row.get("methods"),
+                "carriers", row.get("carriers")
+            ));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("error", "Failed to fetch filter options"));
+                    .body(Map.of("error", "Failed to fetch filter options"));
         }
     }
+
 }
 
